# Task-Manager

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0f493c3a5de9_create_tables.py  647908b9b696_change_created_at.py  6cf7b847392e_update_tables.py  81d062fda935_create_tables.py  b1ef9575e8bb_add_deadline.py  e2a517941b47_add_delete_cascade.py
app/api/: __init__.py
app/api/core/: __init__.py  websocket_manager.py
app/api/db/: __init__.py  admin.py  database.py  models.py  settings_db.py
app/api/endpoints/: auth.py  dependencies.py  filter.py  tasks.py  tasks_utils.py  users.py  users_utils.py
app/api/schemas/: __init__.py  task.py  user.py  websockets.py
commands/: create_superuser.py  createsuperuser.py  fill_database.py  load_users.py
commands/data/: test_tasks.json  test_users.json
docker/: app.sh
